--- a/PortfolioWebsite/index.html
+++ b/PortfolioWebsite/index.html
@@ -1,4 +1,4 @@
-<!-- index.html: Landing page AND TEST 2-->
+<!-- index.html: Landing page AND TEST 2 and a branch and branch edit-->
 <!DOCTYPE html>
 <html lang="en">    
 <head>
