--- a/PortfolioWebsite/contact.html
+++ b/PortfolioWebsite/contact.html
@@ -16,6 +16,11 @@
 <!-- Header with navigation (common to all pages) -->
 
 <body class="landing-page">
+    <div class="social-sidebar">
+        <a href="https://github.com/ahamadey27" target="_blank"><img src="assets/icons/github.png" alt="GitHub"></a>
+        <a href="https://www.linkedin.com/in/alex-hamadey/" target="_blank"><img src="assets/icons/linkedin.png" alt="LinkedIn"></a>
+    </div>
+    <a href="mailto:hamadey@gmail.com" class="email-vertical">hamadey@gmail.com</a>
     <header>
         <nav style="display: flex; justify-content: space-between; align-items: center;">
             <a href="index.html" class="logo">Alex Hamadey</a>
