final commit for the day

--- a/PortfolioWebsite/contact.html
+++ b/PortfolioWebsite/contact.html
@@ -39,7 +39,8 @@
     <main>
         <section class="contact">
             <!-- Introduction text with name highlight -->
-            <h1><span class="section-number">04.</span> Want to Get in Touch?</h1>
+            <h1 class="section-title">Contact</h1>
+            <h1><span class="section-number"></span> Want to Get in Touch?</h1>
             <p>I’m currently open to opportunities. Let's connect!</p>
             <a href="mailto:hamadey@gmail.com" class="button">Mail Me</a>
         </section>
