--- a/PortfolioWebsite/experience.html
+++ b/PortfolioWebsite/experience.html
@@ -39,7 +39,7 @@
     <main>
         <section class="experience">
             <!-- Introduction text with name highlight -->
-        <h1><span class="section-number">02.</span> Experience</h1>
+        <h1 class="section-title"><span class="section-number"></span> Experience</h1>
         <div class="job">
             <h2>Software Developer - XYZ Corp</h2>
             <p class="duration">2022 - Present</p>
