--- a/PortfolioWebsite/projects.html
+++ b/PortfolioWebsite/projects.html
@@ -39,7 +39,7 @@
     <main>
         <section class="projects">
             <!-- Introduction text with name highlight -->
-        <h1><span class="section-number">03.</span> My Projects</h1>
+        <h1 class="section-title"><span class="section-number"></span> My Projects</h1>
         <div class="project-item">
             <h2>Portfolio Website</h2>
             <img src="assets/images/project1.jpg" alt="Screenshot of Portfolio" class="project-screenshot" />
