Basic Structure/outline finished

--- a/PortfolioWebsite/projects.html
+++ b/PortfolioWebsite/projects.html
@@ -41,13 +41,44 @@
             <!-- Introduction text with name highlight -->
         <h1 class="section-title"><span class="section-number"></span> My Projects</h1>
         <div class="project-item">
-            <h2>Portfolio Website</h2>
-            <img src="assets/images/project1.jpg" alt="Screenshot of Portfolio" class="project-screenshot" />
-            <p>Built with HTML & CSS and hosted on GitHub Pages.</p>
-            <p class="project-links">
-                <a href="https://github.com/ahamadey27/Coding-Portfolio" target="_blank">GitHub</a> |
-                <a href="https://store.steampowered.com/app/3436480/Death_in_the_Gulag/" target="_blank">Live Demo</a>
-            </p>
+            <div class="project-image-col">
+                <img src="assets/images/project1.jpg" alt="Screenshot of Portfolio" class="project-screenshot" />
+            </div>
+            <div class="project-content-col">
+                <h2>Portfolio Website</h2>
+                <p>Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.<br>
+                    Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.<br>
+                    Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.<br>
+                    Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.</p>
+                <p>Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.<br>
+                    Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.<br>
+                    Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.<br>
+                    Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.</p>
+                <p class="project-links">
+                    <a href="https://github.com/ahamadey27/Coding-Portfolio" target="_blank">GitHub</a> |
+                    <a href="https://store.steampowered.com/app/3436480/Death_in_the_Gulag/" target="_blank">Live Demo</a>
+                </p>
+            </div>
+        </div>
+        <div class="project-item">
+            <div class="project-image-col">
+                <img src="assets/images/project1.jpg" alt="Screenshot of Portfolio" class="project-screenshot" />
+            </div>
+            <div class="project-content-col">
+                <h2>Portfolio Website</h2>
+                <p>Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.<br>
+                    Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.<br>
+                    Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.<br>
+                    Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.</p>
+                <p>Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.<br>
+                    Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.<br>
+                    Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.<br>
+                    Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.</p>
+                <p class="project-links">
+                    <a href="https://github.com/ahamadey27/Coding-Portfolio" target="_blank">GitHub</a> |
+                    <a href="https://store.steampowered.com/app/3436480/Death_in_the_Gulag/" target="_blank">Live Demo</a>
+                </p>
+            </div>
         </div>
         </section>
     </main>
