--- a/PortfolioWebsite/about.html
+++ b/PortfolioWebsite/about.html
@@ -38,14 +38,15 @@
     <!-- Main content for about page -->
     <main>
         <section class="about about-flex" style="display: flex; flex-direction: row; align-items: flex-start; justify-content: space-between; height: 100%; min-height: 0;">
-            <div class="about-text-col" style="flex:2; display:flex; flex-direction:column; justify-content:center; gap:0.5rem;">
-                <h1 class="section-title" style="margin-bottom:1rem;">About Me</h1>
-                <p style="margin-bottom: 0.5rem;">Hello! I'm Alex Hamadey, a .NET developer based in Kingston, NY.</p>
-                <p style="margin-bottom: 0.5rem;">I have a strong interest in building efficient, user-friendly web applications that make a difference. I'm always eager to learn new technologies and collaborate with others to solve challenging problems.</p>
-                <p style="margin-bottom: 0.5rem;">My passion lies in solving real-world problems with code and collaborating with others to create meaningful digital experiences.</p>
-                <p style="margin-bottom: 0;">Outside of coding, I love reading, exploring new places, and sharing knowledge with fellow developers.</p>
+            <div class="about-text-col" style="flex:2; display:flex; flex-direction:column; justify-content:center; gap:1.2rem;">
+                <h1 class="section-title" style="margin-bottom:2rem;">About Me</h1>
+                <p>Hello! I'm Alex Hamadey, a .NET developer based in Kingston, NY.</p>
+                <p>I have a strong interest in building efficient, user-friendly web applications that make a difference.</p>
+                <p>I'm always eager to learn new technologies and collaborate with others to solve challenging problems.</p>
+                <p>My passion lies in solving real-world problems with code and collaborating with others to create meaningful digital experiences.</p>
+                <p>Outside of coding, I love reading, exploring new places, and sharing knowledge with fellow developers.</p>
             </div>
-            <div class="about-img-col" style="flex:1; display:flex; align-items:flex-start; justify-content:flex-end; margin-top:0;">
+            <div class="about-img-col" style="flex:1; display:flex; align-items:flex-start; justify-content:flex-end; margin-top:0; margin-right: 60px;">
                 <img src="assets/images/profile.jpg" alt="Profile Picture" class="profile-pic about-pic-highlight" style="max-width:320px; height:500px; border-radius:18px; object-fit:cover; box-shadow:0 8px 32px 0 rgba(0,0,0,0.18); border:4px solid var(--color-accent); margin-top:0;" />
             </div>
         </section>
