--- a/PortfolioWebsite/projects.html
+++ b/PortfolioWebsite/projects.html
@@ -59,13 +59,15 @@
                     <a href="https://ecommerceapi-production-d3df.up.railway.app/" target="_blank">Live Demo</a>
                 </p>
             </div>
+            
         </div>
         <div class="project-item">
             <div class="project-image-col">
-                <img src="assets/images/project1.jpg" alt="Screenshot of Portfolio" class="project-screenshot" />
+                <img src="assets/images/samurai.jpg" alt="Screenshot of Portfolio" class="project-screenshot" />
             </div>
+
             <div class="project-content-col">
-                <h2>Portfolio Website</h2>
+                <h2>Samurai Movie Database</h2>
                 <p>Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.<br>
                     Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.<br>
                     Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.<br>
@@ -75,8 +77,29 @@
                     Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.<br>
                     Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.</p>
                 <p class="project-links">
-                    <a href="https://github.com/ahamadey27/Coding-Portfolio" target="_blank">GitHub</a> |
-                    <a href="https://store.steampowered.com/app/3436480/Death_in_the_Gulag/" target="_blank">Live Demo</a>
+                    <a href="https://github.com/ahamadey27/SamuraiMovieDB" target="_blank">GitHub</a> |
+                    <a href="https://samurai-movie-db.azurewebsites.net/" target="_blank">Live Demo</a>
+                </p>
+            </div>
+        </div>
+
+        <div class="project-item">
+            <div class="project-image-col">
+                <img src="assets/images/samurai.jpg" alt="Screenshot of Portfolio" class="project-screenshot" />
+            </div>
+            <div class="project-content-col">
+                <h2>Samurai Movie Database</h2>
+                <p>Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.<br>
+                    Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.<br>
+                    Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.<br>
+                    Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.</p>
+                <p>Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.<br>
+                    Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.<br>
+                    Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.<br>
+                    Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.</p>
+                <p class="project-links">
+                    <a href="https://github.com/ahamadey27/SamuraiMovieDB" target="_blank">GitHub</a> |
+                    <a href="https://samurai-movie-db.azurewebsites.net/" target="_blank">Live Demo</a>
                 </p>
             </div>
         </div>
