--- a/PortfolioWebsite/projects.html
+++ b/PortfolioWebsite/projects.html
@@ -85,10 +85,10 @@
 
         <div class="project-item">
             <div class="project-image-col">
-                <img src="assets/images/samurai.jpg" alt="Screenshot of Portfolio" class="project-screenshot" />
+                <img src="assets/images/boards.jpg" alt="Screenshot of Portfolio" class="project-screenshot" />
             </div>
             <div class="project-content-col">
-                <h2>Samurai Movie Database</h2>
+                <h2>Lumber Cuts and Conversion</h2>
                 <p>Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.<br>
                     Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.<br>
                     Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.<br>
@@ -98,11 +98,33 @@
                     Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.<br>
                     Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.</p>
                 <p class="project-links">
-                    <a href="https://github.com/ahamadey27/SamuraiMovieDB" target="_blank">GitHub</a> |
-                    <a href="https://samurai-movie-db.azurewebsites.net/" target="_blank">Live Demo</a>
+                    <a href="https://github.com/ahamadey27/lumber-webapp" target="_blank">GitHub</a> |
+                    <a href="https://lumber-cut-conversion.azurewebsites.net/" target="_blank">Live Demo</a>
                 </p>
             </div>
         </div>
+
+        <div class="project-item">
+            <div class="project-image-col">
+                <img src="assets/images/boards.jpg" alt="Screenshot of Portfolio" class="project-screenshot" />
+            </div>
+            <div class="project-content-col">
+                <h2>Expense Tracker</h2>
+                <p>Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.<br>
+                    Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.<br>
+                    Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.<br>
+                    Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.</p>
+                <p>Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.<br>
+                    Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.<br>
+                    Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.<br>
+                    Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.</p>
+                <p class="project-links">
+                    <a href="https://github.com/ahamadey27/FinanceApp" target="_blank">GitHub</a> |
+                    <a href="https://expensetrackerpiechart-apfcdrazc9gdhqfs.canadacentral-01.azurewebsites.net/" target="_blank">Live Demo</a>
+                </p>
+            </div>
+        </div>
+
         </section>
     </main>
 
