--- a/PortfolioWebsite/projects.html
+++ b/PortfolioWebsite/projects.html
@@ -106,7 +106,7 @@
 
         <div class="project-item">
             <div class="project-image-col">
-                <img src="assets/images/boards.jpg" alt="Screenshot of Portfolio" class="project-screenshot" />
+                <img src="assets/images/expense.jpg" alt="Screenshot of Portfolio" class="project-screenshot" />
             </div>
             <div class="project-content-col">
                 <h2>Expense Tracker</h2>
