finished project layout

--- a/PortfolioWebsite/projects.html
+++ b/PortfolioWebsite/projects.html
@@ -125,6 +125,71 @@
             </div>
         </div>
 
+        <div class="project-item">
+            <div class="project-image-col">
+                <img src="assets/images/portal.jpg" alt="Screenshot of Portfolio" class="project-screenshot" />
+            </div>
+            <div class="project-content-col">
+                <h2>PDF Portal</h2>
+                <p>Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.<br>
+                    Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.<br>
+                    Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.<br>
+                    Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.</p>
+                <p>Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.<br>
+                    Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.<br>
+                    Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.<br>
+                    Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.</p>
+                <p class="project-links">
+                    <a href="https://github.com/ahamadey27/Mental-Health-Portal" target="_blank">GitHub</a> |
+                    <a href="https://mental-health-portal-dcd4a0dabtczgabp.canadacentral-01.azurewebsites.net/"
+                        target="_blank">Live Demo</a>
+                </p>
+            </div>        
+        </div>
+
+        <div class="project-item">
+            <div class="project-image-col">
+                <img src="assets/images/lang.jpg" alt="Screenshot of Portfolio" class="project-screenshot" />
+            </div>
+            <div class="project-content-col">
+                <h2>Text to AI Speech Model</h2>
+                <p>Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.<br>
+                    Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.<br>
+                    Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.<br>
+                    Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.</p>
+                <p>Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.<br>
+                    Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.<br>
+                    Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.<br>
+                    Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.</p>
+                <p class="project-links">
+                    <a href="https://github.com/ahamadey27/AiLanguageApp" target="_blank">GitHub</a> |
+                    <a href="https://ai-language-app-fdb6d0g0fqckbhdw.canadacentral-01.azurewebsites.net/" target="_blank">Live Demo</a>
+                </p>
+            </div>
+        </div>
+
+        <div class="project-item">
+            <div class="project-image-col">
+                <img src="assets/images/gulag.jpg" alt="Screenshot of Portfolio" class="project-screenshot" />
+            </div>
+            <div class="project-content-col">
+                <h2>Death in the Gulag (Unity Game)</h2>
+                <p>Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.<br>
+                    Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.<br>
+                    Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.<br>
+                    Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.</p>
+                <p>Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.<br>
+                    Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.<br>
+                    Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.<br>
+                    Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.</p>
+                <p class="project-links">
+                    <a href="https://github.com/ahamadey27/Gulag_Game" target="_blank">GitHub</a> |
+                    <a href="https://store.steampowered.com/app/3436480/Death_in_the_Gulag/"
+                        target="_blank">Live Demo</a>
+                </p>
+            </div>
+        </div>
+
         </section>
     </main>
 
