--- a/PortfolioWebsite/projects.html
+++ b/PortfolioWebsite/projects.html
@@ -46,14 +46,18 @@
             </div>
             <div class="project-content-col">
                 <h2>Simple ECommerce App</h2>
-                <p>Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.<br>
-                    Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.<br>
-                    Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.<br>
-                    Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.</p>
-                <p>Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.<br>
-                    Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.<br>
-                    Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.<br>
-                    Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.</p>
+                <p>
+                    This project is a full-featured eCommerce web application that allows users to browse products, 
+                    add items to a shopping cart, and complete purchases through a streamlined checkout process. 
+                    The app features user authentication, product management, and order tracking, providing a realistic 
+                    online shopping experience. It is designed with a clean, responsive interface for both desktop and mobile users.
+                </p>
+                <p>
+                    Built using ASP.NET Core Web API and Entity Framework Core, the backend supports secure user registration, 
+                    JWT-based authentication, and robust CRUD operations for products and orders. The project demonstrates 
+                    best practices in RESTful API design, database modeling, and secure user management, making it a solid 
+                    foundation for scalable eCommerce solutions.
+                </p>
                 <p class="project-links">
                     <a href="https://github.com/ahamadey27/EcommerceAPI" target="_blank">GitHub</a> |
                     <a href="https://ecommerceapi-production-d3df.up.railway.app/" target="_blank">Live Demo</a>
