deleted read me

--- a/PortfolioWebsite/contact.html
+++ b/PortfolioWebsite/contact.html
@@ -1,5 +1,11 @@
 <!-- index.html: Landing page -->
-<!DOCTYPE html>
+<!DO        <section class="contact">
+            <!-- Introduction text with name highlight -->
+            <h1 class="section-title">Contact</h1>
+            <h1><span class="section-number"></span> Want to Get in Touch?</h1>
+            <p>I'm currently open to opportunities. Let's connect!</p>
+            <a href="mailto:hamadey@gmail.com" class="button">Mail Me</a>
+        </section>tml>
 <html lang="en">
 
 <head>
@@ -41,12 +47,11 @@
             <!-- Introduction text with name highlight -->
             <h1 class="section-title">Contact</h1>
             <h1><span class="section-number"></span> Want to Get in Touch?</h1>
-            <p>I’m currently open to opportunities. Let's connect!</p>
+            <p>I'm currently open to opportunities. Let's connect!</p>
             <a href="mailto:hamadey@gmail.com" class="button">Mail Me</a>
         </section>
     </main>
 
-    <!--Footer Section-->
     <footer>
         <div class="footer-container">
             <div class="social">
