--- a/PortfolioWebsite/index.html
+++ b/PortfolioWebsite/index.html
@@ -41,7 +41,8 @@
                 <p>I'm a junior developer specializing in .NET Development.<br>
                 I have a passion for creating efficient web applications and continuously learning new technologies. Welcome to my portfolio!</p>
                 <a href="mailto:hamadey@gmail.com" class="button">Get In Touch</a>
-            <5/section>
+            </div>
+        </section>
     </main>
 
     <!--Footer Section-->
