--- a/PortfolioWebsite/projects.html
+++ b/PortfolioWebsite/projects.html
@@ -72,14 +72,19 @@
 
             <div class="project-content-col">
                 <h2>Samurai Movie Database</h2>
-                <p>Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.<br>
-                    Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.<br>
-                    Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.<br>
-                    Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.</p>
-                <p>Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.<br>
-                    Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.<br>
-                    Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.<br>
-                    Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.</p>
+                <p>
+                    As a samurai movie aficionado, I have a hard time keeping track of all the different films out there. Many contain very similar themes and names (Vendetta of a Samurai VS Samurai Vendetta, for example). So to keep a tight grasp on my DVD collection, I curated database of classic samurai films built with ASP.NET Core Razor Pages. 
+                    This full-stack web application provides an elegant platform to manage and display a 
+                    comprehensive collection of samurai movies, featuring user authentication for administrators and a 
+                    public-facing, searchable catalog for visitors. The project demonstrates core .NET development skills 
+                    including database design, server-side filtering, and secure user management.
+                </p>
+                <p>
+                    Built using ASP.NET Core, Entity Framework Core, and ASP.NET Core Identity for authentication, 
+                    with a clean server-rendered frontend using Razor Pages. The application supports full CRUD operations 
+                    for movie entries, server-side filtering by title, director, and year, and uses SQLite for persistent data 
+                    storage. Ready for deployment to Azure App Service or other cloud platforms.
+                </p>
                 <p class="project-links">
                     <a href="https://github.com/ahamadey27/SamuraiMovieDB" target="_blank">GitHub</a> |
                     <a href="https://samurai-movie-db.azurewebsites.net/" target="_blank">Live Demo</a>
@@ -93,14 +98,12 @@
             </div>
             <div class="project-content-col">
                 <h2>Lumber Cuts and Conversion</h2>
-                <p>Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.<br>
-                    Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.<br>
-                    Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.<br>
-                    Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.</p>
-                <p>Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.<br>
-                    Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.<br>
-                    Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.<br>
-                    Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.</p>
+                <p>
+                    An efficient lumber cutting optimization and unit conversion tool built with ASP.NET Core Razor Pages. This specialized web application is designed for carpenters, woodworkers, and DIY enthusiasts to optimize lumber usage and minimize waste through intelligent cutting algorithms and comprehensive unit conversion utilities. The app features dynamic input management, waste calculation analysis, and real-time optimization results.
+                </p>
+                <p>
+                    Built using ASP.NET Core Razor Pages with a custom Greedy Algorithm implementation for lumber cutting optimization. The application includes a responsive Bootstrap-based UI, service-oriented architecture with dependency injection, and comprehensive measurement conversion tools. Features board-cut optimization, multi-unit support, detailed waste analysis, and is deployed on Azure App Service for reliable performance.
+                </p>
                 <p class="project-links">
                     <a href="https://github.com/ahamadey27/lumber-webapp" target="_blank">GitHub</a> |
                     <a href="https://lumber-cut-conversion.azurewebsites.net/" target="_blank">Live Demo</a>
@@ -114,14 +117,20 @@
             </div>
             <div class="project-content-col">
                 <h2>Expense Tracker</h2>
-                <p>Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.<br>
-                    Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.<br>
-                    Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.<br>
-                    Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.</p>
-                <p>Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.<br>
-                    Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.<br>
-                    Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.<br>
-                    Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.</p>
+                <p>
+                    A personal finance management web application built with ASP.NET Core MVC that provides a clean, 
+                    intuitive platform for tracking personal expenses with visual analytics through interactive charts. 
+                    The project demonstrates modern web development practices using the MVC architectural pattern and features 
+                    expense categorization, data visualization with dynamic pie charts, and comprehensive form validation 
+                    for data integrity.
+                </p>
+                <p>
+                    Built using ASP.NET Core MVC with Entity Framework Core and SQL Server for data persistence, 
+                    featuring a service layer architecture with clean separation of concerns. The application includes 
+                    Bootstrap-powered responsive UI, Chart.js integration for interactive data visualization, client-side 
+                    and server-side validation, and automatic timestamping with category-based analytics for comprehensive 
+                    expense tracking and analysis.
+                </p>
                 <p class="project-links">
                     <a href="https://github.com/ahamadey27/FinanceApp" target="_blank">GitHub</a> |
                     <a href="https://expensetrackerpiechart-apfcdrazc9gdhqfs.canadacentral-01.azurewebsites.net/" target="_blank">Live Demo</a>
@@ -135,14 +144,19 @@
             </div>
             <div class="project-content-col">
                 <h2>PDF Portal</h2>
-                <p>Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.<br>
-                    Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.<br>
-                    Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.<br>
-                    Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.</p>
-                <p>Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.<br>
-                    Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.<br>
-                    Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.<br>
-                    Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.</p>
+                <p>
+                    A modern document management system built with ASP.NET Core Minimal APIs designed for mental 
+                    health providers to upload, process, and search through documents. This prototype web application 
+                    features document text extraction, full-text search capabilities powered by Lucene.NET, and a clean 
+                    responsive interface. The system supports PDF and DOCX file formats with automatic text extraction and 
+                    real-time keyword-based search across all uploaded documents.
+                </p>
+                <p>
+                    Built using ASP.NET Core Minimal APIs with PdfPig and DocX libraries for text extraction, Lucene.NET 
+                    with in-memory indexing for full-text search, and background task processing for asynchronous document 
+                    handling. The application features session-based document storage, RESTful API architecture, responsive 
+                    HTML/CSS/JavaScript frontend, and is deployed on Azure App Service with Docker containerization support.
+                </p>
                 <p class="project-links">
                     <a href="https://github.com/ahamadey27/Mental-Health-Portal" target="_blank">GitHub</a> |
                     <a href="https://mental-health-portal-dcd4a0dabtczgabp.canadacentral-01.azurewebsites.net/"
@@ -157,14 +171,20 @@
             </div>
             <div class="project-content-col">
                 <h2>Text to AI Speech Model</h2>
-                <p>Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.<br>
-                    Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.<br>
-                    Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.<br>
-                    Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.</p>
-                <p>Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.<br>
-                    Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.<br>
-                    Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.<br>
-                    Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.</p>
+                <p>
+                    My friend, Jeff, once made a good point about how the droids communicate in Star Wars - 
+                    how they communicate with each other in the same rhythm and tempo as humans when they could be 
+                    communicating wirelessly or, at least, speak a hyper fast language that only they can comprehend. 
+                    So, I set out to create that language! This innovative web application transforms text into a unique audio 
+                    "language" using rule-based sound synthesis and the Web Audio API.
+                </p>
+                <p>
+                    Built with ASP.NET Core Razor Pages and powered by the Web Audio API, this application converts textual 
+                    characters into distinct audio frequencies, durations, and waveforms using a sophisticated character-to-sound 
+                    encoding system. Features include multi-waveform support for different character categories, real-time audio 
+                    playback, comprehensive character set mapping, and server-side validation. Deployed on Azure App Service with 
+                    modern web development practices.
+                </p>
                 <p class="project-links">
                     <a href="https://github.com/ahamadey27/AiLanguageApp" target="_blank">GitHub</a> |
                     <a href="https://ai-language-app-fdb6d0g0fqckbhdw.canadacentral-01.azurewebsites.net/" target="_blank">Live Demo</a>
@@ -178,14 +198,20 @@
             </div>
             <div class="project-content-col">
                 <h2>Death in the Gulag (Unity Game)</h2>
-                <p>Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.<br>
-                    Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.<br>
-                    Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.<br>
-                    Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.</p>
-                <p>Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.<br>
-                    Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.<br>
-                    Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.<br>
-                    Built with HTML & CSS and hosted on GitHub Pages and there gogkddfkfjkdjfkdj.</p>
+                <p>
+                    My first project as a junior developer was creating a full game from scratch using C# scripts in 
+                    the Unity Game Engine. It taught me the basics of object-oriented programming, methods, and how to create 
+                    flow by creating and modifying scripts. In addition to the scripts, I made all the music, sound design, 
+                    sprites, and animations to create a haunting feel of what it was like to be trapped in the Soviet Gulag. 
+                    This atmospheric horror survival game challenges players to hear the true stories of what these people had to 
+                    endure and witness.
+                </p>
+                <p>
+                    Built entirely in Unity 2D with custom C# scripting, featuring hand-crafted pixel art animations,
+                     original atmospheric soundtrack, and immersive sound design. Successfully published on Steam, 
+                     demonstrating complete game development lifecycle from concept to commercial release, including playtesting, 
+                     bug fixing, and platform-specific optimization for Windows distribution.
+                </p>
                 <p class="project-links">
                     <a href="https://github.com/ahamadey27/Gulag_Game" target="_blank">GitHub</a> |
                     <a href="https://store.steampowered.com/app/3436480/Death_in_the_Gulag/"
