Refactor code structure for improved readability and maintainability

--- a/PortfolioWebsite/experience.html
+++ b/PortfolioWebsite/experience.html
@@ -97,7 +97,7 @@
             <div class="contact-info">
                 <!-- Email (mailto link) and location. The bullet (•) separates the items -->
                 <a href="mailto:hamadey@gmail.com">hamadey@gmail.com</a> &bull;
-                <span class="location">Kingston, NY</span>
+                <span class="location">Kingston/NYC, NY</span>
             </div>
         </div>
     </footer>
