--- a/PortfolioWebsite/about.html
+++ b/PortfolioWebsite/about.html
@@ -38,9 +38,9 @@
     <!-- Main content for about page -->
     <main>
         <section class="about about-flex" style="display: flex; flex-direction: row; align-items: flex-start; justify-content: space-between; height: 100%; min-height: 0;">
-            <div class="about-text-col" style="flex:2; display:flex; flex-direction:column; justify-content:center; gap:1.2rem;">
+            <div class="about-text-col" style="flex:2; display:flex; flex-direction:column; justify-content:center;">
                 <h1 class="section-title" style="margin-bottom:2rem;">About Me</h1>
-                <p>Hello! I'm Alex Hamadey, a .NET developer based in Kingston, NY.</p>
+                <p>Hey there! I'm Alex Hamadey, a .NET developer based in Kingston, NY and NYC.</p>
                 <p>I have a strong interest in building efficient, user-friendly web applications that make a difference.</p>
                 <p>I'm always eager to learn new technologies and collaborate with others to solve challenging problems.</p>
                 <p>My passion lies in solving real-world problems with code and collaborating with others to create meaningful digital experiences.</p>
@@ -65,7 +65,7 @@
             <div class="contact-info">
                 <!-- Email (mailto link) and location. The bullet (•) separates the items -->
                 <a href="mailto:hamadey@gmail.com">hamadey@gmail.com</a> &bull;
-                <span class="location">Kingston, NY</span>
+                <span class="location">Kingston/NYC, NY</span>
             </div>
         </div>
     </footer>
