--- a/PortfolioWebsite/experience.html
+++ b/PortfolioWebsite/experience.html
@@ -41,35 +41,43 @@
             <!-- Introduction text with name highlight -->
         <h1 class="section-title"><span class="section-number"></span> Experience</h1>
         <div class="job">
-            <h2>Software Developer - XYZ Corp</h2>
+            <h2>Video Game Sound Designer & Developer - Freelance</h2>
             <p class="duration">2022 - Present</p>
             <ul>
-                <li>Built web apps using ASP.NET Core</li>
-                <li>Led team on performance improvement tasks</li>
+                <li>Developed and implemented robust audio management pipelines using middleware Audiokinetic’s Wwise and Unreal MetaSounds
+                plus custom scripts in C# and C++, optimizing performance and enhancing audio interactivity.
+                </li>
+                <li>Created engaging original sound design, music and foley for indie video games in a team setting by translating
+                creatives’ ideas into sound while maintaining organized audio pipelines to keep up in real time with evolving game
+                development</li>
             </ul>
         </div>
         <div class="job">
-            <h2>Backend Developer - ABC Solutions</h2>
-            <p class="duration">2021 - 2022</p>
+            <h2>Sample Pack Content Creator - Samples for Mars, Epic Sock Media, Splice</h2>
+            <p class="duration">2012 - Present</p>
             <ul>
-                <li>Designed APIs using C# and RESTful standards</li>
-                <li>Worked closely with front-end teams to integrate services</li>
+                <li>Produced and delivered professional sample packs for major online platforms by recording, editing, and batch-processing
+                thousands of audio assets, while mastering vintage analog/digital hardware, leveraging modern DAW scripting tools, and
+                overseeing UI, developer and graphic design teams for custom GUI applications</li>
+                <li>Designed and implemented custom sound design tools and generative audio systems using ChucK and Max/MSP, applying
+                real-time DSP concepts and creative coding techniques to build modular, reusable scripts for sound design</li>
             </ul>
         </div>
         <div class="job">
-            <h2>Junior Developer - DevLaunch</h2>
-            <p class="duration">2020 - 2021</p>
-            <ul>
-                <li>Maintained internal dashboards and reporting tools</li>
-                <li>Assisted in code reviews and QA automation</li>
-            </ul>
-        </div>
-        <div class="job">
-            <h2>Software Intern - CodePilot Labs</h2>
+            <h2>Educator for electronic Music Production - CodePilot Labs</h2>
             <p class="duration">Summer 2020</p>
             <ul>
                 <li>Built internal tools using HTML, CSS, and JavaScript</li>
                 <li>Learned Agile practices and team workflows</li>
+            </ul>
+        </div>
+        <div class="job">
+            <h2>Sound Designer, Mixer and Composer - Freelance, Hyperballad Music</h2>
+            <p class="duration">2020 - 2021</p>
+            <ul>
+                <li>Provided 360 audio solutions for international ad campaigns for Google, Ford, Kraft, Kate Spade, Volkswagen and UNIQLO
+                to create impactful, high-quality music, mixes and sound design.</li>
+                <li>Managed teams of composers, sound designers, musicians and vocalist to deliver audio assets under tight deadlines</li>
             </ul>
         </div>
         <div class="job">
