--- a/PortfolioWebsite/experience.html
+++ b/PortfolioWebsite/experience.html
@@ -41,7 +41,7 @@
             <!-- Introduction text with name highlight -->
         <h1 class="section-title"><span class="section-number"></span> Experience</h1>
         <div class="job">
-            <h2>Video Game Sound Designer & Developer - Freelance</h2>
+            <h2>Video Game Sound Designer & Developer - <em>Freelance</em></h2>
             <p class="duration">2022 - Present</p>
             <ul>
                 <li>Developed and implemented robust audio management pipelines using middleware Audiokinetic’s Wwise and Unreal MetaSounds
@@ -53,7 +53,7 @@
             </ul>
         </div>
         <div class="job">
-            <h2>Sample Pack Content Creator - Samples for Mars, Epic Sock Media, Splice</h2>
+            <h2>Sample Pack Content Creator - <em>Samples for Mars, Epic Sock Media, Splice</em></h2>
             <p class="duration">2012 - Present</p>
             <ul>
                 <li>Produced and delivered professional sample packs for major online platforms by recording, editing, and batch-processing
@@ -64,16 +64,17 @@
             </ul>
         </div>
         <div class="job">
-            <h2>Educator for electronic Music Production - CodePilot Labs</h2>
-            <p class="duration">Summer 2020</p>
+            <h2>Educator for Electronic Music Production - <em>SoundFly</em></h2>
+            <p class="duration">2021 - 2025</p>
             <ul>
-                <li>Built internal tools using HTML, CSS, and JavaScript</li>
-                <li>Learned Agile practices and team workflows</li>
+                <li>Mentored students by creating detailed lesson plans and videos that covered all facets of electronic music production
+                including DAWs, production, mixing, sound design, arranging, mastering and music business
+                </li>
             </ul>
         </div>
         <div class="job">
-            <h2>Sound Designer, Mixer and Composer - Freelance, Hyperballad Music</h2>
-            <p class="duration">2020 - 2021</p>
+            <h2>Sound Designer, Mixer and Composer - <em>Freelance, Hyperballad Music</em></h2>
+            <p class="duration">2008 - 2024</p>
             <ul>
                 <li>Provided 360 audio solutions for international ad campaigns for Google, Ford, Kraft, Kate Spade, Volkswagen and UNIQLO
                 to create impactful, high-quality music, mixes and sound design.</li>
@@ -81,14 +82,89 @@
             </ul>
         </div>
         <div class="job">
-            <h2>Freelance Web Developer</h2>
-            <p class="duration">2019 - 2020</p>
+            <h2>Head of Content Curation - <em>Livestream (Now Vimeo)</em></h2>
+            <p class="duration">2009 - 2013</p>
             <ul>
-                <li>Created small business websites using static HTML/CSS</li>
-                <li>Customized templates and improved SEO ranking</li>
+                <li>Led a team of content curators responsible for moderating and approving streaming channels, while coordinating responses
+                to customer support inquiries to ensure compliance, quality control, and user satisfaction
+                </li>
+                <li>Identified, documented, and communicated platform bugs and user experience issues to the development team, contributing
+                to ongoing improvements in platform stability and performance
+                </li>
             </ul>
         </div>
             </section>
+        </section>
+
+        <section class="experience">
+            <!-- Introduction text with name highlight -->
+            <h1 class="section-title"><span class="section-number"></span> Education</h1>
+            <div class="job">
+                <h2>Video Game Sound Designer & Developer - <em>Freelance</em></h2>
+                <p class="duration">2022 - Present</p>
+                <ul>
+                    <li>Developed and implemented robust audio management pipelines using middleware Audiokinetic’s Wwise and
+                        Unreal MetaSounds
+                        plus custom scripts in C# and C++, optimizing performance and enhancing audio interactivity.
+                    </li>
+                    <li>Created engaging original sound design, music and foley for indie video games in a team setting by
+                        translating
+                        creatives’ ideas into sound while maintaining organized audio pipelines to keep up in real time with
+                        evolving game
+                        development</li>
+                </ul>
+            </div>
+            <div class="job">
+                <h2>Sample Pack Content Creator - <em>Samples for Mars, Epic Sock Media, Splice</em></h2>
+                <p class="duration">2012 - Present</p>
+                <ul>
+                    <li>Produced and delivered professional sample packs for major online platforms by recording, editing, and
+                        batch-processing
+                        thousands of audio assets, while mastering vintage analog/digital hardware, leveraging modern DAW
+                        scripting tools, and
+                        overseeing UI, developer and graphic design teams for custom GUI applications</li>
+                    <li>Designed and implemented custom sound design tools and generative audio systems using ChucK and Max/MSP,
+                        applying
+                        real-time DSP concepts and creative coding techniques to build modular, reusable scripts for sound
+                        design</li>
+                </ul>
+            </div>
+            <div class="job">
+                <h2>Educator for Electronic Music Production - <em>SoundFly</em></h2>
+                <p class="duration">2021 - 2025</p>
+                <ul>
+                    <li>Mentored students by creating detailed lesson plans and videos that covered all facets of electronic
+                        music production
+                        including DAWs, production, mixing, sound design, arranging, mastering and music business
+                    </li>
+                </ul>
+            </div>
+            <div class="job">
+                <h2>Sound Designer, Mixer and Composer - <em>Freelance, Hyperballad Music</em></h2>
+                <p class="duration">2008 - 2024</p>
+                <ul>
+                    <li>Provided 360 audio solutions for international ad campaigns for Google, Ford, Kraft, Kate Spade,
+                        Volkswagen and UNIQLO
+                        to create impactful, high-quality music, mixes and sound design.</li>
+                    <li>Managed teams of composers, sound designers, musicians and vocalist to deliver audio assets under tight
+                        deadlines</li>
+                </ul>
+            </div>
+            <div class="job">
+                <h2>Head of Content Curation - <em>Livestream (Now Vimeo)</em></h2>
+                <p class="duration">2009 - 2013</p>
+                <ul>
+                    <li>Led a team of content curators responsible for moderating and approving streaming channels, while
+                        coordinating responses
+                        to customer support inquiries to ensure compliance, quality control, and user satisfaction
+                    </li>
+                    <li>Identified, documented, and communicated platform bugs and user experience issues to the development
+                        team, contributing
+                        to ongoing improvements in platform stability and performance
+                    </li>
+                </ul>
+            </div>
+        </section>
         </section>
     </main>
 
