Update experience section: revise education details and remove outdated job entries

--- a/PortfolioWebsite/experience.html
+++ b/PortfolioWebsite/experience.html
@@ -100,71 +100,27 @@
             <!-- Introduction text with name highlight -->
             <h1 class="section-title"><span class="section-number"></span> Education</h1>
             <div class="job">
-                <h2>Video Game Sound Designer & Developer - <em>Freelance</em></h2>
-                <p class="duration">2022 - Present</p>
+                <h2>Boston University - <em>Boston</em></h2>
+                <p class="duration">2004 - 2008</p>
                 <ul>
-                    <li>Developed and implemented robust audio management pipelines using middleware Audiokinetic’s Wwise and
-                        Unreal MetaSounds
-                        plus custom scripts in C# and C++, optimizing performance and enhancing audio interactivity.
-                    </li>
-                    <li>Created engaging original sound design, music and foley for indie video games in a team setting by
-                        translating
-                        creatives’ ideas into sound while maintaining organized audio pipelines to keep up in real time with
-                        evolving game
-                        development</li>
+                    <li>B.A in History || Minor in Communications</li>
                 </ul>
             </div>
             <div class="job">
-                <h2>Sample Pack Content Creator - <em>Samples for Mars, Epic Sock Media, Splice</em></h2>
-                <p class="duration">2012 - Present</p>
+                <h2>The Tech Academy - <em>Online</em></h2>
+                <p class="duration">2023 - 2024</p>
                 <ul>
-                    <li>Produced and delivered professional sample packs for major online platforms by recording, editing, and
-                        batch-processing
-                        thousands of audio assets, while mastering vintage analog/digital hardware, leveraging modern DAW
-                        scripting tools, and
-                        overseeing UI, developer and graphic design teams for custom GUI applications</li>
-                    <li>Designed and implemented custom sound design tools and generative audio systems using ChucK and Max/MSP,
-                        applying
-                        real-time DSP concepts and creative coding techniques to build modular, reusable scripts for sound
-                        design</li>
+                    <li>Certification in Software Development</li>
+                    <li>C#, Python, Django, .NET Framework, T-SQL/SQL, MVC, CRUD, HTML, CSS, JavaScript, T-SQL/SQL, Agile / SCRUM and web
+                    application development.</li>
                 </ul>
             </div>
             <div class="job">
-                <h2>Educator for Electronic Music Production - <em>SoundFly</em></h2>
-                <p class="duration">2021 - 2025</p>
+                <h2>School of Video Game Audio - <em>Online</em></h2>
+                <p class="duration">2022 - 2023</p>
                 <ul>
-                    <li>Mentored students by creating detailed lesson plans and videos that covered all facets of electronic
-                        music production
-                        including DAWs, production, mixing, sound design, arranging, mastering and music business
-                    </li>
+                    <li>Certification in Video Game Sound Design using Wwise</li>
                 </ul>
-            </div>
-            <div class="job">
-                <h2>Sound Designer, Mixer and Composer - <em>Freelance, Hyperballad Music</em></h2>
-                <p class="duration">2008 - 2024</p>
-                <ul>
-                    <li>Provided 360 audio solutions for international ad campaigns for Google, Ford, Kraft, Kate Spade,
-                        Volkswagen and UNIQLO
-                        to create impactful, high-quality music, mixes and sound design.</li>
-                    <li>Managed teams of composers, sound designers, musicians and vocalist to deliver audio assets under tight
-                        deadlines</li>
-                </ul>
-            </div>
-            <div class="job">
-                <h2>Head of Content Curation - <em>Livestream (Now Vimeo)</em></h2>
-                <p class="duration">2009 - 2013</p>
-                <ul>
-                    <li>Led a team of content curators responsible for moderating and approving streaming channels, while
-                        coordinating responses
-                        to customer support inquiries to ensure compliance, quality control, and user satisfaction
-                    </li>
-                    <li>Identified, documented, and communicated platform bugs and user experience issues to the development
-                        team, contributing
-                        to ongoing improvements in platform stability and performance
-                    </li>
-                </ul>
-            </div>
-        </section>
         </section>
     </main>
 
