--- a/PortfolioWebsite/experience.html
+++ b/PortfolioWebsite/experience.html
@@ -93,12 +93,12 @@
                 </li>
             </ul>
         </div>
-            </section>
+
         </section>
 
         <section class="experience">
             <!-- Introduction text with name highlight -->
-            <h1 class="section-title"><span class="section-number"></span> Education</h1>
+            <h1 class="section-title"><span class="section-number"></span>Education</h1>
             <div class="job">
                 <h2>Boston University - <em>Boston</em></h2>
                 <p class="duration">2004 - 2008</p>
@@ -121,6 +121,20 @@
                 <ul>
                     <li>Certification in Video Game Sound Design using Wwise</li>
                 </ul>
+            </div>
+        </section>
+
+        <section class="experience">
+            <!-- Introduction text with name highlight -->
+            <h1 class="section-title"><span class="section-number"></span>Certificates</h1>
+            <ul class="certificates-list">
+                <li>Database and Integration Management (Microsoft)</li>
+                <li>Back-End Development with .NET (Microsoft)</li>
+                <li>Foundations of Coding Back-End (Microsoft)</li>
+                <li>Introduction to Programming With C# (Microsoft)</li>
+                <li>Foundational C# with Microsoft (freeCodeCamp)</li>
+                <li>Intro to Cloud Computing Course (Codecademy)</li>
+            </ul>
         </section>
     </main>
 
